added Organization as a search type

--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -25,10 +25,10 @@
         <select name="search_type">
           <option>Keyword</option>
           <option>Work</option> 
-          <option>Instance</option> 
+          <option>Instance</option>
+          <option>Organization</option> 
           <option>Place</option> 
           <option>Person</option> 
-
         </select>
         <input type="text" name="phrase">
         <input type="submit" value="Run search"></input>
