Added html view for results, continued to debug recursive ingestion

--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -28,6 +28,7 @@
           <option>Instance</option>
           <option>Organization</option> 
           <option>Place</option> 
+          <option>Topic</option>
           <option>Person</option> 
         </select>
         <input type="text" name="phrase">
