--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -18,7 +18,7 @@
   </head>
   <body>
    {% block body %}
-    <h1>BIBFRAME Access and Discovery Catalog</h1>
+    <h1>BIBFRAME Search and Display Catalog</h1>
     <p>Placeholder Main page</p>
     <div> 
       <form method='POST' action='/search'>
@@ -27,6 +27,7 @@
           <option>Work</option> 
           <option>Instance</option>
           <option>Organization</option> 
+          <option>HeldItem</option>
           <option>Place</option> 
           <option>Topic</option>
           <option>Person</option> 
