Added UI version, bibframe now passes pylint, added Fedora cnd and repository.json

--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -18,7 +18,7 @@
   </head>
   <body>
    {% block body %}
-    <h1>BIBFRAME Search and Display Catalog</h1>
+    <h1>BIBFRAME Search and Display Catalog <small>v</small>{{ version }}</h1>
     <p>Placeholder Main page</p>
     <div> 
       <form method='POST' action='/search'>
