--- a/catalog/templates/snippets/header.html
+++ b/catalog/templates/snippets/header.html
@@ -1,6 +1,6 @@
 <header class="row">
   <div class="col-md-4">
-    <h3>Logo Graphic</h3>
+    <h3>Bibframe-Catalog</h3>
   </div>
   <div class="col-md-8">
 
