--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -84,7 +84,7 @@
     </div>
    {% endblock %}
    {% block footer %}
-      {% include 'snippets/dev-footer.html' %}
+      {% include 'snippets/footer.html' %}
    {% endblock %}
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
