--- a/catalog/templates/snippets/header.html
+++ b/catalog/templates/snippets/header.html
@@ -1,9 +1,9 @@
-<header class="row">
+<header class="row container">
   <div class="col-md-4">
-    <h3>Bibframe-Catalog</h3>
+    <h1 class="bibcat bibcat-title">BIBCAT</h1>
   </div>
   <div class="col-md-8">
 
-
   </div>
 </header>
+<hr class="bibcat">
