--- a/catalog/templates/snippets/basic-search.html
+++ b/catalog/templates/snippets/basic-search.html
@@ -1,13 +1,13 @@
-<section class="row">
-
-   <div class="col-md-6 col-md-offset-3">
-	<form role="form" method="POST" action="{{ url_for('search') }}">
-	  <div class="form-group">
-	    <label for="name">Search</label>
-	    <input type="text" name="phrase" class="form-control"><br>
-            <button class="btn btn-primary btn-lg center-block">Go</button>
-	  </div>
-	</form>
+<section class="row container">
+ <form class="container" role="form" method="POST" action="{{ url_for('search') }}">
+   <div class="col-md-6">
+    <div class="form-group">
+      <input type="text" name="phrase" class="form-control input-lg" data-bind="value: queryPhrase"><br>
+    </div>
    </div>
-
+   <div class="col-md-2">
+    <button class="btn btn-primary btn-lg bibcat-search">Search</button>
+   </div>
+ </form>
 </section>
+
