Influx design one w/standard bootstrap

--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -14,7 +14,7 @@
     {% block more_css %}{% endblock %}
 
   </head>
-  <body class="bibcat-background">
+  <body class="container bibcat-background">
    {% block header %}
      {% include 'snippets/header.html' %}
    {% endblock %}
