--- a/catalog/templates/snippets/footer.html
+++ b/catalog/templates/snippets/footer.html
@@ -1,6 +1,5 @@
-<hr>
-<footer class="row">
-  <section class="col-md-6">
+<footer class="row container">
+  <section class="col-md-6 col-md-3-offset">
     <a href="https://github.com/jermnelson/bibframe-catalog/issues/" 
        class="btn btn-info" 
        data-toggle="tooltip" 
