Fixed display for BIBFRAME Entity detail

--- a/catalog/templates/detail.html
+++ b/catalog/templates/detail.html
@@ -9,22 +9,23 @@
 {% endblock %}
 
 {% block body %}
-<h2><em>{% for type in entity['type'] %}{{ type }}{% endfor %} Display <small>v</smalL>{{ version }}</em></h2>
-<h1>{{ entity|name }}</h1>
+<article>
+<h2 class="bibcat-title"><em>{% for type in entity['type'] %}{{ type }}{% endfor %} Display <small>v</smalL>{{ version }}</em></h2>
+<h1 class="bibcat-title">{{ entity|name }}</h1>
 <ul>
- <li><a href="#result">Search Result</a></li>
- <li><a href="#rdf">Fedora RDF</a></li>
- <li><a href="#related">Related BIBFRAME Resources</a></li>
- <li><a href="/{{ entity['fcrepo:uuid'][0] }}.json">JSON-LD</a></li>
+ <li><a class="bibcat-text" href="#result">Search Result</a></li>
+ <li><a class="bibcat-text" href="#related">Related BIBFRAME Resources</a></li>
+ <li><a class="bibcat-text" href="/{{ entity['fcrepo:uuid'][0] }}.json">JSON-LD</a></li>
 </ul>
 <a name="result"></a>
-<h3>Elastic Search Result</h3>
-<dl>
+<h3 class="bibcat-title">Elastic Search Result</h3>
+<dl class="well">
  {% for key, val in entity.items() %}
  <dt>{{ key }}</dt>
  <dd>{{ val }}</dd>
  {% endfor %}
 </dl>
+{#
 <a href="rdf"></a>
 <h3>Fedora RDF</h3>
 <table class="table_border">
@@ -39,8 +40,10 @@
  </tr>
  {% endfor %}
 </table>
+#}
 <a name="related"></a>
-<h3>Related BIBFRAME Resources</h3>
+<h3 class="bibcat-title">Related BIBFRAME Resources</h3>
+<section class="well">
 <p>
  <strong>Total:</strong> {{ related['hits']['total'] }}
 </p>
@@ -56,4 +59,6 @@
 {% endif %}
 {% endfor %}
 </ol>
+</section>
+</article>
 {% endblock %} 
