--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block head_title %}BIBFRAME Access and Discovery Catalog{% endblock %}</title>
+    <title>{% block head_title %}BIBCAT - BIBFRAME Access and Discovery Catalog{% endblock %}</title>
     {% block css %}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bibcat.css') }}">
