--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -12,7 +12,8 @@
     </style>
     {% endblock %}
     {% block more_css %}{% endblock %}
-
+	<script src="//use.typekit.net/xze8etn.js"></script>
+	<script>try{Typekit.load();}catch(e){}</script>
   </head>
   <body class="container bibcat-background">
    {% block header %}
