--- a/catalog/static/css/bibcat.css
+++ b/catalog/static/css/bibcat.css
@@ -4,13 +4,13 @@
 
 .bibcat-text {
   color: #4DBAC7;
-  font-family: 'Arial Black', sans-serif;
+   font-family: "futura-pt", sans-serif;
   text-transform: uppercase;
 }
 
 .bibcat-title {
   color: #FBCE35;
-  font-family: 'Arial Black', sans-serif;
+  font-family: "futura-pt", sans-serif;
   text-transform: uppercase;
   padding-top: 15px;
 }
@@ -18,7 +18,7 @@
 button.bibcat-search {
   background-color: #327C7F;
   color: #FBCE35;
-  font-family: 'Arial Black', sans-serif;
+   font-family: "futura-pt", sans-serif;
   text-transform: uppercase;
 }
 
