--- a/catalog/templates/snippets/header.html
+++ b/catalog/templates/snippets/header.html
@@ -1,6 +1,6 @@
 <header class="row container">
   <div class="col-md-4">
-    <a href="http://bibcat.org"><h1 class="bibcat bibcat-title">BIBCAT</h1></a>
+    <a href="http://bibcat.org"><h1 class="bibcat bibcat-title">BIBCAT - Find it near me</h1></a>
   </div>
   <div class="col-md-8">
 
