continued work on single view

--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bibcat.css') }}">
     </style>
     {% endblock %}
+    <script async defer src="//hypothes.is/embed.js"></script>
     {% block more_css %}{% endblock %}
 	<script src="//use.typekit.net/xze8etn.js"></script>
 	<script>try{Typekit.load();}catch(e){}</script>
