--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -3,6 +3,6 @@
 {% block body %}
 
   {%include 'snippets/basic-search.html'%}
-  {%include 'snippets/brief-result.html'%}
+  {#include 'snippets/brief-result.html'#}
 
 {% endblock %}
