View for LOC Conference Call

--- a/catalog/templates/snippets/held-item.html
+++ b/catalog/templates/snippets/held-item.html
@@ -1,11 +1,15 @@
-<h3 class="bibcat-text">
-{% if 'bf:label' in item %}
-   {{ item.get('bf:holdingFor')|name }} 
+<div class="bibcat-text lead">
+{% if 'fcrepo:uuid' in item %}
+   {{ item.get('bf:heldBy')|org_name }} 
    {% if not 'bf:circulationStatus' in item %}
+     {{ item.get('bf:circulationStatus') }}
+   {% else %}
      AVAILABLE
    {% endif %} 
+<a href="#" class="bibcat-text" onclick="alert('Display map for {{ item }}')">Map it</a>
 {% else %}
 {{ item.org_label.value }} {{ item.circ_status.value }} 
   <a href="#" class="bibcat-text" onclick="alert('Display map for {{ item.item_id.value }}')">Map it</a>
+ 
 {% endif %}
-</h3>
+</div>
