started implementing typeahead search

--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -88,10 +88,10 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-min.js"></script>
+  <script src="{{ url_for('static', filename='js/typeahead.bundle.js') }}"></script>
   <script src="{{ url_for('static', filename='js/bibcat.js') }}"></script>
-  <script>
-   ko.applyBindings(new CatalogViewModel());
+  {% block activity %}
 
-  </script> 
+  {% endblock %}
   </body>
 </html>
