--- a/catalog/templates/snippets/basic-search.html
+++ b/catalog/templates/snippets/basic-search.html
@@ -3,8 +3,8 @@
    {{ basic_search.csrf_token }}
    <input type="hidden" id="search-url" value="{{ url_for('search') }}"></input>
    <div class="col-md-6">
-    <div class="form-group">
-      <input type="text" name="phrase" class="form-control input-lg" {#data-bind="value: queryPhrase"#}
+    <div class="form-group" id="bf_typeahead">
+      <input type="text" name="phrase" class="typeahead form-control input-lg" {#data-bind="value: queryPhrase"#}
        {% if phrase %}placeholder="{{ phrase }}"{% endif %}
        ><br>
     </div>
