--- a/catalog/templates/snippets/brief-result.html
+++ b/catalog/templates/snippets/brief-result.html
@@ -1,13 +1,10 @@
 <hr class="bibcat" style="background-color: #4DBAC7;" data-bind="visible: searchResults().length > 0">
 <section class="container">
 <ul class="media-list" id="Results" data-bind="foreach: searchResults">
-  {% set entity = hit['_source'] #}
   <li class="media" itemscope> 
    <h3 class="media-heading bibcat-title"> 
-     {# <a class="bibcat-title" href="{{ entity['fcrepo:uuid'][0] }}"> #}
-     <a class="bibcat-title" data-bind="attr: { 'href': id }">
+     <a class="bibcat-title" data-bind="attr: { 'href': url }">
      <span data-bind="text: title"></span> / <span data-bind="text: author"></span> 
-      {#{ entity|name }} {% if 'bf:creator' in entity %}/ {{ entity|creator }}{% endif #}
      </a>
    </h3>
    <div class="media-left">
@@ -16,15 +13,11 @@
      </a>
    </div>
    <article class="media-body" data-bind="foreach: locations">
-     {#<h4 class="media-heading bibcat-text">{{ entity|bf_type }}</h4>#}
-     <h4 class="media-heading bibcat-text">Location 1 - 1.2 Miles - Map it</h4>
-
      <h4 class="media-heading bibcat-text">Location 1
        <a class="bibcat-text" data-bind="attr: { href: locationURL, text: locationText }"></a> -
        <a class="bibcat-text" data-bind="attr: { href: locationMap }">Map it</a>
      </h4>
    </article> 
   </li>
- {# endfor #}
 </ul> 
 </section>
