--- a/catalog/templates/snippets/footer.html
+++ b/catalog/templates/snippets/footer.html
@@ -1,6 +1,9 @@
 <footer class="row container">
-  <section class="col-md-6 col-md-3-offset">
+  <section class="col-md-6 col-md-3-offset" >
     <a href="https://github.com/jermnelson/bibframe-catalog/issues/" 
+       data-spy="affix" 
+       data-offset-top="60" 
+       data-offset-bottom="50"
        class="btn btn-info" 
        data-toggle="tooltip" 
        data-placement="top"
