--- a/catalog/templates/snippets/held-item.html
+++ b/catalog/templates/snippets/held-item.html
@@ -1,15 +1,12 @@
 <div class="bibcat-text lead">
-{% if 'fcrepo:uuid' in item %}
-   {{ item.get('bf:heldBy')|org_name }} 
+{% if 'bf:label' in item %}
+   {{ item.get('bf:holdingFor')|name }} 
    {% if not 'bf:circulationStatus' in item %}
-     {{ item.get('bf:circulationStatus') }}
-   {% else %}
      AVAILABLE
    {% endif %} 
-<a href="#" class="bibcat-text" onclick="alert('Display map for {{ item }}')">Map it</a>
 {% else %}
-{{ item.org_label.value }} {{ item.circ_status.value }} 
-  <a href="#" class="bibcat-text" onclick="alert('Display map for {{ item.item_id.value }}')">Map it</a>
- 
+{{ item.get('bf:heldBy')|get_label }}
+{{ item.get('bf:circulationStatus', 'AVAILABLE').value }} 
+  <a href="#" class="bibcat-text" onclick="alert('Display map for {{ item.get('bf:itemId').0  }}')">Map it</a>
 {% endif %}
 </div>
