--- a/catalog/templates/snippets/held-item.html
+++ b/catalog/templates/snippets/held-item.html
@@ -1,4 +1,5 @@
 <div class="bibcat-text lead">
+ {{ item.get('fedora:uuid') }}
 {% if 'bf:label' in item %}
    {{ item.get('bf:holdingFor')|name }} 
    {% if not 'bf:circulationStatus' in item %}
@@ -6,6 +7,9 @@
    {% endif %} 
 {% else %}
 {{ item.get('bf:heldBy')|get_label }}
+{% if 'bf:subLocation' in item %}
+  {{ item.get('bf:subLocation') }}
+{% endif %}
 {{ item.get('bf:circulationStatus', 'AVAILABLE').value }} 
   <a href="#" class="bibcat-text" onclick="alert('Display map for {{ item.get('bf:itemId').0  }}')">Map it</a>
 {% endif %}
