--- a/catalog/templates/snippets/held-item.html
+++ b/catalog/templates/snippets/held-item.html
@@ -7,17 +7,19 @@
  {% if 'bf:subLocation' in item %}
    : {{ item.get('bf:subLocation')[0] }}
  {% endif %}
-{% if 'bf:label' in item %}
-   {{ item.get('bf:holdingFor')|name }} 
-   {% if not 'bf:circulationStatus' in item %}
-     AVAILABLE
-   {% endif %} 
+{% if 'bf:circulationStatus' in item %}
+   {{ item.get('bf:circulationStatus')[0] }}
 {% else %}
+     AVAILABLE
+{% endif %} 
+
+{# if 'bf:label' in item %}
+   {{ item.get('bf:holdingFor')|name }} 
 {{ item.get('bf:heldBy')|get_label }}
 {% if 'bf:subLocation' in item %}
   {{ item.get('bf:subLocation') }}
 {% endif %}
 {{ item.get('bf:circulationStatus', 'AVAILABLE').value }} 
   <a href="#" class="bibcat-text" onclick="alert('Display map for {{ item.get('bf:itemId').0  }}')">Map it</a>
-{% endif %}
+{% endif #}
 </div>
