Now displaying call number for held item

--- a/catalog/templates/snippets/brief-result.html
+++ b/catalog/templates/snippets/brief-result.html
@@ -15,6 +15,7 @@
    </div>
    <article class="media-body" data-bind="foreach: held_items">
      <h4 class="media-heading bibcat-text">
+       <span data-bind="text: subLocation"></span>
        <span data-bind="text: shelfMarkLcc"></span>
        <span data-bind="text: circulationStatus"></span> - 
        <a class="bibcat-text" onclick="alert('Coming soon!')">Map it</a>
