--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -3,6 +3,7 @@
 {% block body %}
 
   {%include 'snippets/basic-search.html' %}
+  {%include 'snippets/bf_searchToolbar.html' %}
   {%include 'snippets/brief-result.html' %}
 
 {% endblock %}
@@ -11,6 +12,15 @@
 <script>
    var catalog_view_model = new CatalogViewModel();
    ko.applyBindings(catalog_view_model);
+   var sortOptions = $('.bfSortUl');
+   $(".bfSortOptions").append(sortOptions);
+   $(".bfSortOptions").hover(
+						function(){$('.bfSortUl').show();},
+						function(){$('.bfSortUl').hide();}
+						);
+	$('.bfSortUl').click(function(){$(this).hide()});
+   var completeSortOptions = $(".bfSortOptions");
+   $(".bf_searchToolbarUl").prepend(completeSortOptions);
    bfAgents.initialize();
    bfInstances.initialize();
    bfWorks.initialize(); 
@@ -21,19 +31,21 @@
       highlight: true
    },
    {
-      name: 'bf-works',
-      displayKey: 'work',
-      source: bfWorks.ttAdapter(),
-      templates: {
-       header: '<h3 class="bg-info">Works</h3>'
-      }
+	name: 'bf-works',		
+	displayKey: 'work',		
+	source: bfWorks.ttAdapter(),	
+	templates: {
+				header: '<div class=\'ttSection\'><h3 class="bg-info">Works</h3>',
+				footer: '</div>'
+				}
    },
    {
       name: 'bf-instance',
       displayKey: 'instance',
       source: bfInstances.ttAdapter(),
       templates: {
-       header: '<h3 class="bg-info">Instances</h3>'
+       header: '<div class=\'ttSection\'><h3 class="bg-info">Instances</h3>',
+       footer: '</div>'
       }
    },
    {
@@ -41,7 +53,8 @@
       displayKey: 'agent',
       source: bfAgents.ttAdapter(),
       templates: {
-       header: '<h3 class="bg-info">Agents (People/Organizations)</h3>'
+       header: '<div class=\'ttSection\'><h3 class="bg-info">Agents (People/Organizations)</h3>',
+       footer: '</div>'
       }
    },
    {
@@ -49,7 +62,8 @@
       displayKey: 'topic',
       source: bfTopics.ttAdapter(),
       templates: {
-       header: '<h3 class="bg-info">Topics</h3>'
+       header: '<div class=\'ttSection\'><h3 class="bg-info">Topics</h3>',
+       footer: '</div>'
       }
 
   }).on('typeahead:selected', function (obj, datum) {
