--- a/catalog/static/css/bibcat.css
+++ b/catalog/static/css/bibcat.css
@@ -173,4 +173,4 @@ div[class^='tt-dataset']:hover .bg-info{
 	border-left: none; 
 	box-shadow:inset 1px 2px 3px #999999;*/ 
 	font-style:normal;
-};
+}
